adding test1 data

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Hi!! This is a readme file containing the basics of Git 
+Hi!! This is a readme file containing the basics of Git
+Test1 adding data 
